TSUp and comments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "jsx": "preserve",
     "incremental": true,
     "noUncheckedIndexedAccess": true,
+    "tsBuildInfoFile": "dist/.tsbuildinfo",
     "paths": {
       "@/*": [
         "./*"
