--- a/package.json
+++ b/package.json
@@ -3,7 +3,22 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "build": "tsc"
+    "build": "tsup",
+    "watch": "tsup --watch"
+  },
+  "tsup": {
+    "entry": [
+      "src/**/*.ts"
+    ],
+    "splitting": false,
+    "sourcemap": true,
+    "clean": true,
+    "minify": true,
+    "dts": true,
+    "format": [
+      "cjs",
+      "esm"
+    ]
   },
   "keywords": [],
   "author": "Tim Ritter <t-ritter-mail@web.de>",
@@ -20,6 +35,7 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^3.0.1",
+    "tsup": "^7.2.0",
     "typescript": "^5.1.6"
   }
 }
