--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "scripts": {
     "build": "tsup",
-    "watch": "tsup --watch"
+    "watch": "tsup --watch",
+    "eslint:check": "eslint --ext .ts,.tsx .",
+    "eslint:fix": "eslint --fix --ext .ts,.tsx .",
+    "prettier:check": "prettier --check .",
+    "prettier:fix": "prettier --write ."
   },
   "tsup": {
     "entry": [
@@ -26,15 +30,13 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^6.3.0",
+    "@types/eslint": "^8.44.2",
+    "@types/node": "^20.4.9",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.46.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "^37.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0",
-    "prettier": "^3.0.1",
+    "eslint-config-next": "^13.4.12",
+    "prettier": "^3.0.0",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6"
   }
