--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "build": "tsup",
-    "watch": "tsup --watch",
+    "dev": "tsup --watch",
     "eslint:check": "eslint --ext .ts,.tsx .",
     "eslint:fix": "eslint --fix --ext .ts,.tsx .",
     "prettier:check": "prettier --check .",
@@ -11,7 +11,7 @@
   },
   "tsup": {
     "entry": [
-      "src/**/*.ts"
+      "./src/**/*.ts"
     ],
     "splitting": false,
     "sourcemap": true,
@@ -25,8 +25,9 @@
   },
   "author": "Tim Ritter <t-ritter-mail@web.de>",
   "license": "ISC",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     "./package.json": "./package.json",
     ".": {
@@ -42,6 +43,10 @@
       "require": "./dist/connectors/index.js"
     }
   },
+  "files": [
+    "./dist/**/*",
+    "./dist/connectors/**/*"
+  ],
   "devDependencies": {
     "@types/eslint": "^8.44.2",
     "@types/node": "^20.4.9",
