--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@types/node": "^20.5.0",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "open-headless": "workspace:^"
   }
 }
