--- a/examples/simple-typo3/package.json
+++ b/examples/simple-typo3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple",
+  "name": "simple-typo3",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -14,6 +14,6 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "open-headless": "workspace:^"
+    "open-headless": "workspace:0.0.4"
   }
 }
